[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/endscreen.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/EndScreen.gd" type="Script" id=2]
[ext_resource path="res://Sound effects/win.wav" type="AudioStream" id=3]
[ext_resource path="res://fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sound effects/button_click.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreen" type="Sprite" parent="."]
z_index = -50
z_as_relative = false
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 824.0
margin_top = 321.0
margin_right = 944.0
margin_bottom = 379.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.172549, 1, 0, 1 )
text = "MainMenu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 31.0
margin_right = 120.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" type="Node2D" parent="."]

[node name="ButtonCliks" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Win" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 3 )
[connection signal="ready" from="." to="." method="_on_Control_ready"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
